--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,9 +1,9 @@
 Pickups:
-	Change points crystal to white.(common-92.5%?)
-	Add Blue pickup for Shield. (rare-2.5%?)
-	Add red pickup for Damage+ (very rare-1.25%?)
-	Add yellow pickup for FireRate+ (very rare-1.25%?)
-	Add green pickup for healing (rare - 2.5%?) 
+	Change points crystal to white.(common-85%?) done
+	Add Blue pickup for Shield. (rare-5%?) 
+	Add red pickup for Damage+ (very rare-2.5%?) done
+	Add yellow pickup for FireRate+ (very rare-2.5%?) done
+	Add green pickup for healing (rare - 5%?) done
 
 
 Enemies:
