--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,6 +1,6 @@
-Pickups:
+Pickups: Done?
 	Change points crystal to white.(common-85%?) done
-	Add Blue pickup for Shield. (rare-5%?) 
+	Add Blue pickup for Shield. (rare-5%?) done
 	Add red pickup for Damage+ (very rare-2.5%?) done
 	Add yellow pickup for FireRate+ (very rare-2.5%?) done
 	Add green pickup for healing (rare - 5%?) done
